--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
 
         header {
-            padding: 30px 10px 10px;
+            padding: 20px 10px 10px;
             background-color: transparent;
         }
 
@@ -26,37 +26,37 @@
         }
 
         header .image {
-            width: 100px;
+            width: 70px;
             height: auto;
             filter: drop-shadow(0 0 5px #00ffcc);
         }
 
         header h1 {
-            font-size: 36px;
+            font-size: 24px;
             margin-top: 10px;
             color: #00ffcc;
-            letter-spacing: 2px;
+            letter-spacing: 1px;
         }
 
         .unique-frame {
-            margin: 30px auto;
-            padding: 20px;
+            margin: 20px auto;
+            padding: 15px;
             background: #003300;
-            border: 8px solid #654321;
-            border-radius: 20px;
+            border: 4px solid #654321;
+            border-radius: 16px;
             width: 90%;
-            max-width: 700px;
-            box-shadow: 0 0 25px rgba(0, 255, 204, 0.3);
+            max-width: 400px;
+            box-shadow: 0 0 15px rgba(0, 255, 204, 0.3);
             color: #fff;
         }
 
         .unique-frame h2 {
-            font-size: 24px;
-            margin-bottom: 10px;
+            font-size: 18px;
+            margin-bottom: 5px;
         }
 
         .unique-frame p {
-            font-size: 16px;
+            font-size: 14px;
             margin: 0;
             color: #ccc;
         }
@@ -65,39 +65,39 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 30px;
-            margin: 40px 0;
+            gap: 20px;
+            margin: 20px 0 80px;
         }
 
         .rule {
-            padding: 20px;
+            padding: 15px;
             background: #003300;
-            border: 8px solid #654321;
-            border-radius: 20px;
+            border: 4px solid #654321;
+            border-radius: 16px;
             width: 90%;
-            max-width: 600px;
-            box-shadow: 0 0 15px rgba(0, 255, 204, 0.2);
+            max-width: 400px;
+            box-shadow: 0 0 10px rgba(0, 255, 204, 0.2);
             color: #fff;
         }
 
         .rule h3 {
-            font-size: 24px;
+            font-size: 18px;
             margin-bottom: 10px;
         }
 
         .rule .subtitle {
-            font-size: 18px;
-            color: #ccc;
-            margin-bottom: 20px;
+            font-size: 14px;
+            color: #ddd;
+            margin-bottom: 10px;
         }
 
         .billiard-table {
             position: relative;
             background: #006400;
-            padding: 20px;
-            border: 12px solid #654321;
-            border-radius: 20px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
+            padding: 10px;
+            border: 8px solid #3a2f1b;
+            border-radius: 16px;
+            box-shadow: 0 0 10px rgba(0, 255, 204, 0.2);
             width: fit-content;
             margin: 0 auto;
         }
@@ -106,51 +106,45 @@
         .billiard-table::after {
             content: '';
             position: absolute;
-            width: 20px;
-            height: 20px;
+            width: 14px;
+            height: 14px;
             background: black;
             border-radius: 50%;
         }
 
-        .billiard-table::before { top: -10px; left: -10px; }
-        .billiard-table::after { top: -10px; right: -10px; }
-        .billiard-table .pocket.bl { bottom: -10px; left: -10px; }
-        .billiard-table .pocket.br { bottom: -10px; right: -10px; }
-        .billiard-table .pocket.ml { bottom: -10px; left: 50%; transform: translateX(-50%); }
-        .billiard-table .pocket.mt { top: -10px; left: 50%; transform: translateX(-50%); }
+        .billiard-table::before { top: -7px; left: -7px; }
+        .billiard-table::after { top: -7px; right: -7px; }
+        .billiard-table .pocket.bl { bottom: -7px; left: -7px; }
+        .billiard-table .pocket.br { bottom: -7px; right: -7px; }
+        .billiard-table .pocket.ml { bottom: -7px; left: 50%; transform: translateX(-50%); }
+        .billiard-table .pocket.mt { top: -7px; left: 50%; transform: translateX(-50%); }
 
         .billiard-table video {
-            width: 100%;
-            max-width: 400px;
+            width: 250px;
             height: auto;
-            border-radius: 12px;
+            border-radius: 10px;
         }
 
         .rule p {
-            font-size: 14px;
+            font-size: 12px;
             color: #bbb;
-            margin-top: 20px;
+            margin-top: 10px;
         }
 
         footer {
             background-color: #000;
             color: #EDEDED;
-            padding: 12px;
-            font-size: 13px;
+            padding: 10px;
+            font-size: 12px;
             position: fixed;
             width: 100%;
             bottom: 0;
             border-top: 1px solid #00ffcc44;
         }
 
-        @media (max-width: 768px) {
-            .rule, .unique-frame {
-                width: 95%;
-            }
-
-            header h1 {
-                font-size: 24px;
-            }
+        footer span {
+            color: #00ffcc;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -234,7 +228,7 @@
     </section>
 
     <footer>
-        &copy; Royal Group
+        &copy; <span>Royal Group</span>
     </footer>
 </body>
 </html>
