--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
 
         header {
-            padding: 20px 10px 10px;
+            padding: 12px 10px 6px;
             background-color: transparent;
         }
 
@@ -26,37 +26,36 @@
         }
 
         header .image {
-            width: 70px;
+            width: 55px;
             height: auto;
-            filter: drop-shadow(0 0 5px #00ffcc);
         }
 
         header h1 {
-            font-size: 24px;
-            margin-top: 10px;
-            color: #00ffcc;
-            letter-spacing: 1px;
+            font-size: 18px;
+            margin-top: 6px;
+            color: #ffffff;
+            letter-spacing: 0.5px;
+            font-weight: 700;
         }
 
         .unique-frame {
-            margin: 20px auto;
-            padding: 15px;
+            margin: 16px auto;
+            padding: 10px;
             background: #003300;
-            border: 4px solid #654321;
-            border-radius: 16px;
-            width: 90%;
-            max-width: 400px;
-            box-shadow: 0 0 15px rgba(0, 255, 204, 0.3);
+            border: 3px solid #654321;
+            border-radius: 14px;
+            width: 92%;
+            max-width: 340px;
             color: #fff;
         }
 
         .unique-frame h2 {
-            font-size: 18px;
-            margin-bottom: 5px;
+            font-size: 16px;
+            margin-bottom: 4px;
         }
 
         .unique-frame p {
-            font-size: 14px;
+            font-size: 13px;
             margin: 0;
             color: #ccc;
         }
@@ -65,39 +64,37 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 20px;
-            margin: 20px 0 80px;
+            gap: 16px;
+            margin: 16px 0 80px;
         }
 
         .rule {
-            padding: 15px;
+            padding: 12px;
             background: #003300;
-            border: 4px solid #654321;
-            border-radius: 16px;
-            width: 90%;
-            max-width: 400px;
-            box-shadow: 0 0 10px rgba(0, 255, 204, 0.2);
+            border: 3px solid #654321;
+            border-radius: 14px;
+            width: 92%;
+            max-width: 340px;
             color: #fff;
         }
 
         .rule h3 {
-            font-size: 18px;
-            margin-bottom: 10px;
+            font-size: 16px;
+            margin-bottom: 8px;
         }
 
         .rule .subtitle {
-            font-size: 14px;
+            font-size: 13px;
             color: #ddd;
-            margin-bottom: 10px;
+            margin-bottom: 8px;
         }
 
         .billiard-table {
             position: relative;
             background: #006400;
-            padding: 10px;
-            border: 8px solid #3a2f1b;
-            border-radius: 16px;
-            box-shadow: 0 0 10px rgba(0, 255, 204, 0.2);
+            padding: 8px;
+            border: 6px solid #3a2f1b;
+            border-radius: 14px;
             width: fit-content;
             margin: 0 auto;
         }
@@ -106,45 +103,45 @@
         .billiard-table::after {
             content: '';
             position: absolute;
-            width: 14px;
-            height: 14px;
+            width: 12px;
+            height: 12px;
             background: black;
             border-radius: 50%;
         }
 
-        .billiard-table::before { top: -7px; left: -7px; }
-        .billiard-table::after { top: -7px; right: -7px; }
-        .billiard-table .pocket.bl { bottom: -7px; left: -7px; }
-        .billiard-table .pocket.br { bottom: -7px; right: -7px; }
-        .billiard-table .pocket.ml { bottom: -7px; left: 50%; transform: translateX(-50%); }
-        .billiard-table .pocket.mt { top: -7px; left: 50%; transform: translateX(-50%); }
+        .billiard-table::before { top: -6px; left: -6px; }
+        .billiard-table::after { top: -6px; right: -6px; }
+        .billiard-table .pocket.bl { bottom: -6px; left: -6px; }
+        .billiard-table .pocket.br { bottom: -6px; right: -6px; }
+        .billiard-table .pocket.ml { bottom: -6px; left: 50%; transform: translateX(-50%); }
+        .billiard-table .pocket.mt { top: -6px; left: 50%; transform: translateX(-50%); }
 
         .billiard-table video {
-            width: 250px;
+            width: 210px;
             height: auto;
-            border-radius: 10px;
+            border-radius: 8px;
         }
 
         .rule p {
-            font-size: 12px;
+            font-size: 11px;
             color: #bbb;
-            margin-top: 10px;
+            margin-top: 8px;
         }
 
         footer {
             background-color: #000;
-            color: #EDEDED;
-            padding: 10px;
-            font-size: 12px;
+            color: #b0b0b0;
+            padding: 8px;
+            font-size: 11px;
             position: fixed;
             width: 100%;
             bottom: 0;
-            border-top: 1px solid #00ffcc44;
+            border-top: 1px solid #333;
         }
 
         footer span {
-            color: #00ffcc;
-            font-weight: bold;
+            color: #b0b0b0;
+            font-weight: normal;
         }
     </style>
 </head>
