--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 
         .billiard-table {
             position: relative;
-            background: #c4a484;
+            background: #e0e0e0; /* light grey street-like */
             padding: 6px;
-            border: 6px solid #8b5a2b;
+            border: 6px solid #222; /* dark sketch-style city border */
             border-radius: 10px;
             width: fit-content;
             margin: 0 auto;
@@ -105,7 +105,7 @@
             position: absolute;
             width: 10px;
             height: 10px;
-            background: #222;
+            background: #000;
             border-radius: 50%;
         }
 
