--- a/index.html
+++ b/index.html
@@ -91,10 +91,14 @@
 
         .billiard-table {
             position: relative;
-            background: #e0e0e0; /* light grey street-like */
+            background: linear-gradient(to bottom, #f0f0f0, #d0d0d0);
             padding: 6px;
-            border: 6px solid #222; /* dark sketch-style city border */
-            border-radius: 10px;
+            border: 6px solid #000000;
+            border-radius: 12px;
+            box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+            background-image: url('alley-sketch.jpg');
+            background-size: cover;
+            background-position: center;
             width: fit-content;
             margin: 0 auto;
         }
