--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     </header>
 
     <div class="unique-frame">
-        <h2>Billiard League</h2>
+        <h2>Pool League</h2>
         <p>Match Rules and Rounds</p>
     </div>
 
