--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             border: 6px solid #000000;
             border-radius: 12px;
             box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-            background-image: url('alley-sketch.jpg');
+            background-image: url('1alley-sketch.jpg');
             background-size: cover;
             background-position: center;
             width: fit-content;
