--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
         }
 
         footer {
-            background-color: #f0f0f0;
-            color: #333;
+            background-color: #444;
+            color: white;
             padding: 8px;
             font-size: 11px;
             position: fixed;
