--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         }
 
         footer span {
-            color: #333;
+            color: #white;
             font-weight: normal;
         }
     </style>
