--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <p>8-Ball • 1 vs 1 • 5 Racks</p>
         </div>
 
-        <div class="rule">
+        <-- <div class="rule">
             <h3>Round 2</h3>
             <div class="subtitle">Bank Shots Only<br><br>تسديدات البنط فقط</div>
             <div class="billiard-table">
@@ -193,7 +193,7 @@
                 </video>
             </div>
             <p>9-Ball • 1 vs 1 • 5 Racks</p>
-        </div>
+        </div> --!>
 
         <div class="rule">
             <h3>Semi Final</h3>
