--- a/index.html
+++ b/index.html
@@ -178,6 +178,23 @@
             </div>
             <p>8-Ball • 1 vs 1 • 5 Racks</p>
         </div>
+ <-- 
+<div class="rule">
+            <h3>Round 2</h3>
+            <div class="subtitle">Bank Shots Only<br><br>تسديدات البنط فقط</div>
+            <div class="billiard-table">
+                <div class="pocket bl"></div>
+                <div class="pocket br"></div>
+                <div class="pocket ml"></div>
+                <div class="pocket mt"></div>
+                <video controls>
+                    <source src="billiard2.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+            <p>9-Ball • 1 vs 1 • 5 Racks</p>
+        </div> 
+--!>
 
        
         <div class="rule">
