--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
 
     <section class="rules-container">
         <div class="rule">
-            <h3>Round 1</h3>
-            <div class="subtitle">Straight Pool<br><br>بول المباشر</div>
+            <h3>Round 1,2 </h3>
+            <div class="subtitle">Straight Pool<br><br>⏦ البلاك جدار فقط ❕</div>
             <div class="billiard-table">
                 <div class="pocket bl"></div>
                 <div class="pocket br"></div>
@@ -176,7 +176,7 @@
                     Your browser does not support the video tag.
                 </video>
             </div>
-            <p>8-Ball • 1 vs 1 • 5 Racks</p>
+            <p>𝖫𝗂𝗏𝖾 ༝ 𝟪-𝖻𝖺𝗅𝗅 𝟣𝗏𝟣 ༝ 𝖱𝖺𝗇𝖽𝗈𝗆 ༝ 𝖭𝗈𝗋𝗆𝖺𝗅 ⏦ </p>
         </div>
 
        
