--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <section class="rules-container">
         <div class="rule">
             <h3>Round 1,2 </h3>
-            <div class="subtitle">Straight Pool<br><br>⏦ البلاك جدار فقط ❕</div>
+            <div class="subtitle">Straight Pool<br><br>❕ البلاك جدار فقط ⏦</div>
             <div class="billiard-table">
                 <div class="pocket bl"></div>
                 <div class="pocket br"></div>
