--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
        
         <div class="rule">
             <h3>Semi Final</h3>
-            <div class="subtitle">Combo Master<br><br>الضربات المتتابعة</div>
+            <div class="subtitle">Combo Master<br><br>❕كورتين جدار + البلاك محور ⏦</div>
             <div class="billiard-table">
                 <div class="pocket bl"></div>
                 <div class="pocket br"></div>
@@ -193,7 +193,7 @@
                     Your browser does not support the video tag.
                 </video>
             </div>
-            <p>10-Ball • 1 vs 1 • 7 Racks</p>
+            <p>𝖫𝗂𝗏𝖾 ༝ 𝟪-𝖻𝖺𝗅𝗅 𝟣𝗏𝟣 ༝ 𝖱𝖺𝗇𝖽𝗈𝗆 ༝ 𝖭𝗈𝗋𝗆𝖺𝗅 ⏦</p>
         </div>
 
         <div class="rule">
