--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
     <section class="rules-container">
         <div class="rule">
-            <h3>Round 1,2 </h3>
+            <h3>Round 1,2 ≀ָ࣪🎱꒷</h3>
             <div class="subtitle">Straight Pool<br><br>❕ البلاك جدار فقط ⏦</div>
             <div class="billiard-table">
                 <div class="pocket bl"></div>
@@ -181,7 +181,7 @@
 
        
         <div class="rule">
-            <h3>Semi Final</h3>
+            <h3>Semi Final ≀ָ࣪🎱꒷</h3>
             <div class="subtitle">Combo Master<br><br>❕كورتين جدار + البلاك محور ⏦</div>
             <div class="billiard-table">
                 <div class="pocket bl"></div>
@@ -197,8 +197,8 @@
         </div>
 
         <div class="rule">
-            <h3>Final Match</h3>
-            <div class="subtitle">Mixed Challenge<br><br>تحدي شامل (بنك / كومبو / تسديدة طويلة)</div>
+            <h3>Final Match ≀ָ࣪🎱꒷</h3>
+            <div class="subtitle">Mixed Challenge<br><br>❕ القيم كله جدار + البلاك محور ⏦</div>
             <div class="billiard-table">
                 <div class="pocket bl"></div>
                 <div class="pocket br"></div>
@@ -209,7 +209,7 @@
                     Your browser does not support the video tag.
                 </video>
             </div>
-            <p>Mixed Rules • 1 vs 1 • Race to 9</p>
+            <p>𝖫𝗂𝗏𝖾 ༝ 𝟪-𝖻𝖺𝗅𝗅 𝟣𝗏𝟣 ༝ 𝖱𝖺𝗇𝖽𝗈𝗆 ༝ 𝖭𝗈𝗋𝗆𝖺𝗅 ⏦</p>
         </div>
     </section>
 
