--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <div class="pocket ml"></div>
                 <div class="pocket mt"></div>
                 <video controls>
-                    <source src="billiard1.mp4" type="video/mp4">
+                    <source src="1billiard1.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -189,7 +189,7 @@
                 <div class="pocket ml"></div>
                 <div class="pocket mt"></div>
                 <video controls>
-                    <source src="billiard3.mp4" type="video/mp4">
+                    <source src="2billiard3.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -205,7 +205,7 @@
                 <div class="pocket ml"></div>
                 <div class="pocket mt"></div>
                 <video controls>
-                    <source src="billiard4.mp4" type="video/mp4">
+                    <source src="3billiard4.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
