--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <section class="rules-container">
         <div class="rule">
             <h3>Round 1,2 ≀ָ࣪🎱꒷</h3>
-            <div class="subtitle">Straight Pool<br><br>❕ البلاك جدار فقط ⏦</div>
+            <div class="subtitle">⏦ Black Kick Shot❕<br><br>❕ البلاك جدار فقط ⏦</div>
             <div class="billiard-table">
                 <div class="pocket bl"></div>
                 <div class="pocket br"></div>
@@ -182,7 +182,7 @@
        
         <div class="rule">
             <h3>Semi Final ≀ָ࣪🎱꒷</h3>
-            <div class="subtitle">Combo Master<br><br>❕كورتين جدار + البلاك محور ⏦</div>
+            <div class="subtitle">⏦ 2 Ball's Kick Shot + Black Double Kick Shot❕<br><br>❕كورتين جدار + البلاك محور ⏦</div>
             <div class="billiard-table">
                 <div class="pocket bl"></div>
                 <div class="pocket br"></div>
@@ -198,7 +198,7 @@
 
         <div class="rule">
             <h3>Final Match ≀ָ࣪🎱꒷</h3>
-            <div class="subtitle">Mixed Challenge<br><br>❕ القيم كله جدار + البلاك محور ⏦</div>
+            <div class="subtitle">⏦ All Balls Kick Shot + Black Double kick shot❕<br><br>❕ القيم كله جدار + البلاك محور ⏦</div>
             <div class="billiard-table">
                 <div class="pocket bl"></div>
                 <div class="pocket br"></div>
